Ajuste na configuração de conexão com o banco no Railway

--- a/.env
+++ b/.env
@@ -1,10 +1,14 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=
-DB_NOME=nzoagro1
 
 ADMIN_EMAIL=admin@nzoagro.com
 ADMIN_PASSWORD=primeiroApp
+
+DB_HOST=mysql.railway.internal
+DB_PORT=3306
+DB_USER=root
+DB_PASSWORD=lQfjuAFTfluHIcXFRiqosjhVcYfPhHsW
+DB_NAME=railway
+
+
 # secure: process.env.NODE_ENV === "production",
 # NODE_ENV=production
 # secure: process.env.NODE_ENV === "production",
