--- a/.env
+++ b/.env
@@ -2,8 +2,9 @@
 ADMIN_EMAIL=admin@nzoagro.com
 ADMIN_PASSWORD=primeiroApp
 
-DB_HOST=mysql.railway.internal
-DB_PORT=3306
+
+DB_HOST=yamanote.proxy.rlwy.net
+DB_PORT=17138
 DB_USER=root
 DB_PASSWORD=lQfjuAFTfluHIcXFRiqosjhVcYfPhHsW
 DB_NAME=railway
