--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mysql2": "^3.12.0",
     "pdfkit": "^0.17.0",
     "socket.io": "^4.8.1",
+    "streamifier": "^0.1.1",
     "validator": "^13.12.0"
   }
 }
